# LibreCAD_dxf2pdf_standalone

./: .gitignore  .travis.yml  README.md  azure_pipelines.yml  prepare.sh
dxf2pdf/: CMakeLists.txt
dxf2pdf/libraries/libdxfrw/: CMakeLists.txt
dxf2pdf/libraries/muparser/: CMakeLists.txt
dxf2pdf/librecad/: CMakeLists.txt
dxf2pdf/librecad/src/lib/engine/: rs_entitycontainer.cpp.patch  rs_graphic.cpp.patch  rs_hatch.cpp.patch  rs_settings.cpp.patch  rs_system.cpp.patch  rs_undo.cpp.patch
dxf2pdf/librecad/src/lib/fileio/: rs_fileio.cpp.patch
dxf2pdf/librecad/src/lib/filters/: rs_filterdxfrw.cpp.patch
dxf2pdf/librecad/src/lib/gui/: rs_graphicview.cpp.patch  rs_graphicview.h.patch
dxf2pdf/librecad/src/main/: main.cpp.patch  main.h.patch
dxf2pdf/librecad/src/main/console_dxf2pdf/: console_dxf2pdf.cpp.patch
